--- a/jyujin39/adtech/tableau/태블로를 이용한 구매전환 데이터 시각화 튜토리얼.md
+++ b/jyujin39/adtech/tableau/태블로를 이용한 구매전환 데이터 시각화 튜토리얼.md
@@ -2,7 +2,9 @@
 
 '쌍문동 서울대' 광고주의 자사몰 ‘오징어샵’에는 다양한 페이지 - 메인페이지, 상품페이지, 상품 후기 페이지, 문의 페이지 등 - 들이 있습니다. 각 페이지마다 유입되는 고객이 몇 명이며, 그 중 구매를 발생시키는 고객은 얼마나 되는지, 즉 **페이지별 구매전환**을 확인하기 위해 아래와 같은 대시보드를 만들어보겠습니다.
 
-![image-20211021215150422](/Users/jeon-yujin/Downloads/jsmoda.jpg)
+![first_page](https://user-images.githubusercontent.com/44221498/138288366-bf998b2a-f56e-4083-aeb2-07393f87d206.jpg)
+
+
 
 
 
@@ -14,9 +16,7 @@
    
 
 2. 우선 페이지에 해당하는 필드 `Page Title` 을 '열' 로 끌어오고, 페이지별로 보고자 하는 두 측정값 중 `유입`부터 행으로 끌어옵니다. 이제 페이지별 유입 수를 볼 수 있게 되었습니다.
-
-
-   ![jsmoda 3](/Users/jeon-yujin/Downloads/jsmoda 3.jpg)
+   ![third](https://user-images.githubusercontent.com/44221498/138288752-81768f1c-7cd6-4cd9-ae84-12d5c85b9cc5.jpg)
 
 
 
@@ -25,7 +25,7 @@
    매개변수 이름은 ‘결제 플랫폼’으로 설정했습니다. 선택지는 문자열이므로 `데이터 유형`은 ‘문자열'로 선택하고, `허용 가능한 값`은 위에서 정의한 4가지 항목으로 고정시켜야 하기 때문에 '목록’으로 지정해줍니다. 그러면 아래에 `값 목록` 이라는 입력란이 생기는데, 여기에 우리가 표시하고자 하는 4가지 항목들을 적어주면 됩니다.
 
 
-   ![image](/Users/jeon-yujin/Downloads/image.jpg)
+   ![image](https://user-images.githubusercontent.com/44221498/138288876-c5d6fa41-a59c-4a31-beaa-0ecfc75a68f3.jpg)
 
 
 
@@ -33,15 +33,18 @@
 
    다시 한 번 화면 좌측 빈 공간에서 우클릭을 하고 `계산된 필드 만들기` 를 클릭합니다. 필드 이름은 ‘구매’로 하겠습니다. 특정 결제플랫폼이 선택되었을 때 해당 플랫폼에서 결제가 이루어진 구매 건을 집계하는 것이 목적이므로, 각 플랫폼 선택지마다 다른 구매수를 반환해야 합니다. 이를 위해 데이터 준비 단계에서 미리 구매수 데이터를 매개변수 항목들과 동일한 이름의 구매수 필드들로 분리해두었습니다. ‘결제 플랫폼’이라는 매개변수의 값이 ‘네이버페이’일 때는 ‘네이버페이’ 구매수를, ‘오징어샵’일 때는 ‘오징어샵’ 구매수를 반환하는 간단한 case when 구문으로 우리가 원하는 결제플랫폼별 구매 수 집계가 가능하게 됩니다.
 
+   ![image 2](https://user-images.githubusercontent.com/44221498/138288940-89e862ed-8b39-4531-8b10-4a019ceba737.jpg)
 
-   ![image 2](/Users/jeon-yujin/Downloads/image 2.jpg)
+
+   
 
 
 
 5. 왼쪽 측정값들 사이에 방금 생성한 `구매` 필드가 추가되었을 것입니다. 이 필드를 화면 상단 ‘행'의 `유입` 필드 옆에 끌어다놓겠습니다. 이 때 `유입` 필드와 `구매` 필드 각각의 축이 분리된 차트가 생성될텐데요, 두 필드의 수치를 한눈에 비교하기 위해 축을 하나로 통일하는 게 좋을 것 같습니다. ‘행'에서 두 필드 중 오른쪽에 놓인 필드를 우클릭하여 ‘이중 축’을 선택합니다. 축은 합쳐졌지만 그래프 표현 방식이 마음에 들지 않으므로 화면 우측 상단의 '표현 방식’을 클릭해 '병렬 막대’ 그래프를 선택합니다. 
-   
 
-   ![image 3](/Users/jeon-yujin/Downloads/image 3.jpg)
+   ![image 3](https://user-images.githubusercontent.com/44221498/138289021-18db486d-9219-4830-b4c7-80d2ce664694.jpg)
+
+   
 
 
 
@@ -49,7 +52,7 @@
    좌측에서 `Page Category` 변수를 끌어와 ‘필터’ 박스 안에 놓습니다. 팝업창이 뜨면 목록 하단에서 ‘전체’를 선택해 모든 항목들이 체크된 상태로 확인을 누릅니다. ‘필터’ 박스에 생성된 변수를 우클릭하여 ‘필터 표시’를 누르면 화면 오른쪽에 필터가 목록 형태로 나타나게 됩니다. 이제 원하는 페이지 카테고리를 선택해서 볼 수 있게 되었습니다.
 
 
-   ![image 4](/Users/jeon-yujin/Downloads/image 4.jpg)
+   ![image 4](https://user-images.githubusercontent.com/44221498/138289130-83bdd0e9-2424-493e-8a20-38b845425adb.jpg)
 
 
 
@@ -57,28 +60,28 @@
    위에서 했던 것처럼 다시 한 번 ‘계산된 필드 만들기’를 실행합니다. 이번 필드의 이름은 ‘구매 발생 여부’로 하겠습니다. 계산식은 앞서 작성했던 계산식보다 더 간결합니다. if 구문을 사용해 단순히 구매수가 0인 경우와 아닌 경우만 구분하면 됩니다. 계산에 사용되는 구매수 집계는 위에서 생성했던 ‘구매’ 필드를 사용하면 되겠죠!
 
 
-   ![image 5](/Users/jeon-yujin/Downloads/image 5.jpg)
+   ![image 5](https://user-images.githubusercontent.com/44221498/138289185-d3678137-eac7-4691-aa5e-ec3dd4ad72cd.jpg)
 
 
 
 8. 방금 생성한 `구매 발생 여부` 필드를 필터 박스로 끌어오고, 위에서 했던 것과 동일한 방식으로 필터가 화면 우측에 나타나도록 해줍니다. 이제 구매가 발생한 페이지만 골라서 볼 수 있게 되었습니다!
 
 
-   ![image 6](/Users/jeon-yujin/Downloads/image 6.jpg)
+   ![image 6](https://user-images.githubusercontent.com/44221498/138289260-313a3e9e-cb44-4ec1-aa4b-8f44e9598e08.jpg)
 
 
 
 9. 마지막으로 날짜 필터를 추가해보려고 합니다. `Event Date` 필드를 ‘필터’ 박스로 끌어오면 필터링 방식을 선택하라는 팝업이 뜰텐데요, 가장 단순한 방법을 사용하겠습니다. ‘날짜 범위’ 선택 후 전부 확인을 누르고 필터를 표시하면 슬라이더로 간편하게 날짜를 필터링할 수 있게 됩니다. 
 
 
-   ![image 7](/Users/jeon-yujin/Downloads/image 7.jpg)
+   ![image 7](https://user-images.githubusercontent.com/44221498/138289415-4c8123a0-5734-41d5-8219-5a012d1e9495.jpg)
 
 
 
 10. 정말 마지막으로 한 가지만 더 추가해보겠습니다. 페이지별 유입 대비 구매가 대략 어느정도 이루어지는지는 보이는데, 정확한 수치가 잘 확인되지 않습니다. 가장 간단한 해결책은 그래프 좌측의 ‘마크’ 박스 안에 ‘레이블’이라는 항목을 클릭하여 ‘마크 레이블 표시’에 체크하는 것입니다. 이제 바그래프의 막대 위쪽에 각 측정값의 수치가 표시됩니다.
 
 
-    ![image 8](/Users/jeon-yujin/Downloads/image 8.jpg)
+    ![image 8](https://user-images.githubusercontent.com/44221498/138289484-cb08b6c4-0d53-47c4-bc0b-e823a66b427c.jpg)
 
  
 
