이미지 수정

--- a/jyujin39/adtech/tableau/태블로를 이용한 구매전환 데이터 시각화 튜토리얼.md
+++ b/jyujin39/adtech/tableau/태블로를 이용한 구매전환 데이터 시각화 튜토리얼.md
@@ -9,9 +9,7 @@
 
 
 1. 데이터를 연결해줍니다.
-   
-
-   ![jsmoda 2](/Users/jeon-yujin/Downloads/jsmoda 2.jpg)
+   ![data](https://user-images.githubusercontent.com/44221498/138289809-17df3f5e-d13d-4a3d-9df0-f09f4dd18f77.jpg)
 
    
 
